third_party/move/move-compiler-v2/tests/more-v1/expansion/public_main.exp

Diagnostics:
error: unnecessary or extraneous item
  ┌─ tests/more-v1/expansion/public_main.move:2:1
  │
2 │ public fun main() {
  │ ^^^^^^ Invalid 'public' visibility modifier. Script functions are not callable from other Move functions.
